Removed uneeded settings and use correct port

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,5 @@
-  corona.planblick.svc:
+  corona.crowdsoft.net:
     build: .
-    environment:
-      USERNAME: crowdsoft
-      TEAM: 240625
-      POWER: light
     restart: always
-    stdin_open: true
-    tty: true
     ports:
-    - "7397:7396/tcp"
+    - "7396:7396/tcp"
